# Devops-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test-e2e.yml  docker-compose-test-unit.yml  docker-compose-test.yml  main.tf  poetry.toml  prod-start.sh  prod_start.sh  pyproject.toml  todo-app-architecture.drawio  todo-app-architecture.html  wsgi.py
.github/workflows/: ci-pipeline.yml
ansible/: load_to_controller.sh  todoapp.service
ansible/controller_files/: .env.j2  inventory  playbook.yml
kubernetes/: deployment.yml  secrets-template.yml  service.yml
tests/integration/: app_test.py
tests/tests_e2e/: e2e_test.py
tests/unit/: view_model_test.py
tests_e2e/: e2e_test.py
todo_app/: app.py  flask_config.py  init_auth.py  start.py  user.py  view_model.py  wsgi.py
todo_app/data/: item.py  mongo_items.py  trello_items.py
todo_app/templates/: index.html
