[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
selenium = "^4.1.0"
autopep8 = "^1.6.0"
poethepoet = "^0.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
test = "pytest tests"
e2eTest = "docker-compose -f docker-compose-test-e2e.yml -p todo-app-test-e2e up"
